add styled feedback list
