# ModuleManagementClient/src/app/core/modules/openapi/api/proposal-controller.serviceInterface.ts
@@ -87,6 +87,6 @@ export interface ProposalControllerServiceInterface {
      * @param proposalId 
      * @param userIdDTO 
      */
-    submitProposal(proposalId: number, userIdDTO: UserIdDTO, extraHttpRequestParams?: any): Observable<string>;
+    submitProposal(proposalId: number, userIdDTO: UserIdDTO, extraHttpRequestParams?: any): Observable<ProposalViewDTO>;
 
 }
