# ModuleManagementClient/src/app/core/modules/openapi/model/feedback.ts
@@ -1,7 +1,7 @@
 /**
  * OpenAPI definition
  *
- * 
+ *
  *
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
  * https://openapi-generator.tech
@@ -9,32 +9,29 @@
  */
 import { User } from './user';
 
-
-export interface Feedback { 
-    feedbackId?: number;
-    feedbackFrom?: User;
-    requiredRole?: Feedback.RequiredRoleEnum;
-    status?: Feedback.StatusEnum;
-    submissionDate?: string;
-    comment?: string;
+export interface Feedback {
+  feedbackId?: number;
+  feedbackFrom?: User;
+  requiredRole?: Feedback.RequiredRoleEnum;
+  status: Feedback.StatusEnum;
+  submissionDate?: string;
+  comment?: string;
 }
 export namespace Feedback {
-    export type RequiredRoleEnum = 'QUALITY_MANAGEMENT' | 'ACADEMIC_PROGRAM_ADVISOR' | 'EXAMINATION_BOARD' | 'PROFESSOR';
-    export const RequiredRoleEnum = {
-        QualityManagement: 'QUALITY_MANAGEMENT' as RequiredRoleEnum,
-        AcademicProgramAdvisor: 'ACADEMIC_PROGRAM_ADVISOR' as RequiredRoleEnum,
-        ExaminationBoard: 'EXAMINATION_BOARD' as RequiredRoleEnum,
-        Professor: 'PROFESSOR' as RequiredRoleEnum
-    };
-    export type StatusEnum = 'PENDING_SUBMISSION' | 'PENDING_FEEDBACK' | 'APPROVED' | 'REJECTED' | 'OBSOLETE' | 'CANCELLED';
-    export const StatusEnum = {
-        PendingSubmission: 'PENDING_SUBMISSION' as StatusEnum,
-        PendingFeedback: 'PENDING_FEEDBACK' as StatusEnum,
-        Approved: 'APPROVED' as StatusEnum,
-        Rejected: 'REJECTED' as StatusEnum,
-        Obsolete: 'OBSOLETE' as StatusEnum,
-        Cancelled: 'CANCELLED' as StatusEnum
-    };
+  export type RequiredRoleEnum = 'QUALITY_MANAGEMENT' | 'ACADEMIC_PROGRAM_ADVISOR' | 'EXAMINATION_BOARD' | 'PROFESSOR';
+  export const RequiredRoleEnum = {
+    QualityManagement: 'QUALITY_MANAGEMENT' as RequiredRoleEnum,
+    AcademicProgramAdvisor: 'ACADEMIC_PROGRAM_ADVISOR' as RequiredRoleEnum,
+    ExaminationBoard: 'EXAMINATION_BOARD' as RequiredRoleEnum,
+    Professor: 'PROFESSOR' as RequiredRoleEnum
+  };
+  export type StatusEnum = 'PENDING_SUBMISSION' | 'PENDING_FEEDBACK' | 'APPROVED' | 'REJECTED' | 'OBSOLETE' | 'CANCELLED';
+  export const StatusEnum = {
+    PendingSubmission: 'PENDING_SUBMISSION' as StatusEnum,
+    PendingFeedback: 'PENDING_FEEDBACK' as StatusEnum,
+    Approved: 'APPROVED' as StatusEnum,
+    Rejected: 'REJECTED' as StatusEnum,
+    Obsolete: 'OBSOLETE' as StatusEnum,
+    Cancelled: 'CANCELLED' as StatusEnum
+  };
 }
-
-
