# ModuleManagementClient/src/app/core/modules/openapi/model/proposal.ts
@@ -1,7 +1,7 @@
 /**
  * OpenAPI definition
  *
- * 
+ *
  *
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
  * https://openapi-generator.tech
@@ -10,23 +10,20 @@
 import { User } from './user';
 import { ModuleVersion } from './module-version';
 
-
-export interface Proposal { 
-    proposalId?: number;
-    createdBy?: User;
-    creationDate?: string;
-    status?: Proposal.StatusEnum;
-    moduleVersions?: Array<ModuleVersion>;
+export interface Proposal {
+  proposalId: number;
+  createdBy?: User;
+  creationDate?: string;
+  status: Proposal.StatusEnum;
+  moduleVersions?: Array<ModuleVersion>;
 }
 export namespace Proposal {
-    export type StatusEnum = 'PENDING_SUBMISSION' | 'PENDING_FEEDBACK' | 'ACCEPTED' | 'REQUIRES_REVIEW' | 'CANCELED';
-    export const StatusEnum = {
-        PendingSubmission: 'PENDING_SUBMISSION' as StatusEnum,
-        PendingFeedback: 'PENDING_FEEDBACK' as StatusEnum,
-        Accepted: 'ACCEPTED' as StatusEnum,
-        RequiresReview: 'REQUIRES_REVIEW' as StatusEnum,
-        Canceled: 'CANCELED' as StatusEnum
-    };
+  export type StatusEnum = 'PENDING_SUBMISSION' | 'PENDING_FEEDBACK' | 'ACCEPTED' | 'REQUIRES_REVIEW' | 'CANCELED';
+  export const StatusEnum = {
+    PendingSubmission: 'PENDING_SUBMISSION' as StatusEnum,
+    PendingFeedback: 'PENDING_FEEDBACK' as StatusEnum,
+    Accepted: 'ACCEPTED' as StatusEnum,
+    RequiresReview: 'REQUIRES_REVIEW' as StatusEnum,
+    Canceled: 'CANCELED' as StatusEnum
+  };
 }
-
-
