# ModuleManagementClient/src/app/core/modules/openapi/model/proposals-compact-dto.ts
@@ -1,30 +1,27 @@
 /**
  * OpenAPI definition
  *
- * 
+ *
  *
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
  * https://openapi-generator.tech
  * Do not edit the class manually.
  */
 
-
-export interface ProposalsCompactDTO { 
-    proposalId?: number;
-    createdBy?: string;
-    status: ProposalsCompactDTO.StatusEnum;
-    latestVersion?: number;
-    latestTitle?: string;
+export interface ProposalsCompactDTO {
+  proposalId?: number;
+  createdBy?: string;
+  status: ProposalsCompactDTO.StatusEnum;
+  latestVersion?: number;
+  latestTitle?: string;
 }
 export namespace ProposalsCompactDTO {
-    export type StatusEnum = 'PENDING_SUBMISSION' | 'PENDING_FEEDBACK' | 'ACCEPTED' | 'REQUIRES_REVIEW' | 'CANCELED';
-    export const StatusEnum = {
-        PendingSubmission: 'PENDING_SUBMISSION' as StatusEnum,
-        PendingFeedback: 'PENDING_FEEDBACK' as StatusEnum,
-        Accepted: 'ACCEPTED' as StatusEnum,
-        RequiresReview: 'REQUIRES_REVIEW' as StatusEnum,
-        Canceled: 'CANCELED' as StatusEnum
-    };
+  export type StatusEnum = 'PENDING_SUBMISSION' | 'PENDING_FEEDBACK' | 'ACCEPTED' | 'REQUIRES_REVIEW' | 'CANCELED';
+  export const StatusEnum = {
+    PendingSubmission: 'PENDING_SUBMISSION' as StatusEnum,
+    PendingFeedback: 'PENDING_FEEDBACK' as StatusEnum,
+    Accepted: 'ACCEPTED' as StatusEnum,
+    RequiresReview: 'REQUIRES_REVIEW' as StatusEnum,
+    Canceled: 'CANCELED' as StatusEnum
+  };
 }
-
-
